tests/baselines/reference/moduleAugmentationsImports4.errors.txt
main.ts(8,9): error TS2454: Variable 'a' is used before being assigned.
main.ts(9,9): error TS2454: Variable 'a' is used before being assigned.


==== main.ts (2 errors) ====
    /// <reference path="d.d.ts"/>
    /// <reference path="e.d.ts"/>
    import {A} from "./a";
    import "D";
    import "E";
    
    let a: A;
    let b = a.getB().x.toFixed();
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
    let c = a.getCls().y.toLowerCase();
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
==== a.ts (0 errors) ====
    export class A {}
    
==== b.ts (0 errors) ====
    export class B {x: number;}
    
==== c.d.ts (0 errors) ====
    declare module "C" {
        class Cls {y: string; }
    }
    
==== d.d.ts (0 errors) ====
    declare module "D" {
        import {A} from "a";
        import {B} from "b";
        module "a" {
            interface A {
                getB(): B;
            }
        }
    }
    
==== e.d.ts (0 errors) ====
    /// <reference path="c.d.ts"/>
    declare module "E" {
        import {A} from "a";
        import {Cls} from "C";
    
        module "a" {
            interface A {
                getCls(): Cls;
            }
        }
    }
    